# qbitwave

./: .gitignore  CHANGELOG.md  Makefile  README.md  citations.cff  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: compressibility.py  heatmap.py  increasing_entropy.py  photon_heatmap.py  sine_emergence.py  sine_wavefunction_cmp.py
latex/: qbitwave.tex
qbitwave/: __init__.py  qbitwave.py  qbitwave_mdl.py  qbitwave_visualizer.py
tests/: test_qbitwave.py  test_qbitwave_mdl.py
