[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["qbitwave"]

[project]
name = "qbitwave"
version = "0.2.1"
description = "Discrete emergent wavefunction"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = "MIT"
keywords = ["physics", "quantum"]
authors = [
  {name = "Juha Meskanen", email = "juha@meskanen.com" }
]
maintainers = [
  {name = "Juha Meskanen", email = "juha@meskanen.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Programming Language :: Python :: 3.9",
]

dependencies = [
 "numpy>=1.25,<1.27",
 "scipy>=1.10",
 "numba>=0.59",
 "matplotlib",
]


[project.urls]
"Homepage" = "https://github.com/juhakm/qbitwave"
"Bug Reports" = "https://github.com/juhakm/qbitwave"
"Say Thanks!" = "https://github.com/juhakm/qbitwave"
"Source" = "https://github.com/juhakm/qbitwave"


[tool.mypy]
files = ["qbitwave/*.py", "examples/*.py"]
ignore_missing_imports = false


[tool.setuptools.package-data]
"qbitwave" = ["py.typed"]

